--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <label for="text">Ваше сообщение:</label>
     <br>
     <textarea id="text" rows="2" cols="15"></textarea>
+    <input type="submit" value="Cвязаться">
     </form>
     <hr>
 </body>
